# euler

./: Makefile  pyproject.toml
problems/even_fibonacci_numbers/: code.py
problems/largest_palindrome_product/: code.py
problems/largest_prime_factor/: code.py
problems/multiples_of_3_or_5/: code.py
problems/smallest_multiple/: code.py
problems/sum_square_difference/: code.py
tests/even_fibonacci_numbers/: test_code.py
tests/largest_palindrome_product/: test_code.py
tests/largest_prime_factor/: test_code.py
tests/multiples_of_3_or_5/: test_code.py
tests/smallest_multiple/: test_code.py
tests/sum_square_difference/: test_code.py
