[tool.poetry]
name = "Project EULER"
version = "0.1.0"
description = "Problems with solutions"
authors = ["Schwifter <d.goglidze22@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
typer = "*"

[tool.poetry.group.dev.dependencies]
coverage = "*"
faker = "*"
pytest = "*"
pytest-cov = "*"
pytest-env = "*"

[tool.poetry.group.lint.dependencies]
mypy = "*"
ruff = "*"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = true

[tool.ruff]
target-version = "py311"
line-length = 88
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    "venv",
]

lint.select = ["E", "F", "I"]
lint.ignore = []
lint.fixable = ["A", "B", "C", "D", "E", "F", "I"]
lint.unfixable = []

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.coverage.report]
skip_empty = true
skip_covered = true
show_missing = true
